patch from Joerg Brunsmann to fix bug #39268.  r=scc